fix: code splitting and formatting

--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ div {
 	margin-right: 20px;
 }
 
-.card_title {
+.benefits-card_title {
 	font-weight: 900;
 	font-size: 32px;
 	line-height: 37px;
