--- a/css/styles.css
+++ b/css/styles.css
@@ -17,11 +17,6 @@ div {
 
 /* CONTAINERS */
 
-.header-container {
-	width: 100%;
-	margin: 0 auto;
-}
-
 .container {
 	width: 100%;
 	margin: 0 auto;
@@ -243,17 +238,20 @@ div {
 }
 
 .carousel_ellipse {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	border-radius: 100%;
-	width: 10px;
-	height: 10px;
+	min-width: 10px;
+	min-height: 10px;
 	margin-right: 10px;
 }
 
 .ellipse_btn {
 	border: 1px solid white;
 	background: transparent;
-	width: 100%;
-	height: 100%;
+	width: 10px;
+	height: 10px;
 	border-radius: 100%;
 }
 
