--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,32 @@ div {
 	justify-content: center;
 }
 
+/* SECTION: FEATURE 3 */
+
+.feature_card {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
+	max-width: 310px;
+	min-height: 246px;
+	width: 100%;
+	border-radius: 10px;
+	box-shadow: 0px 0px 10px rgba(156, 160, 172, 0.4);
+	padding: 22px;
+}
+
+.feature_card svg {
+	margin-bottom: 20px;
+}
+
+.feature_card span {
+	margin-bottom: 10px;
+	font-size: 22px;
+	line-height: 26px;
+	font-weight: 900;
+}
+
 /* ANYWHERE */
 
 .font-maxbold {
