--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900');
 @import url('https://fonts.googleapis.com/css2?family=Rochester&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -454,6 +455,133 @@ div {
 	font-weight: 400;
 }
 
+/* SECTION: PRICING */
+
+.price_card {
+	position: relative;
+	background: #ffffff;
+	border: 1px solid #d6dae4;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	padding: 30px;
+	height: 553px;
+	margin-right: 10px;
+	z-index: 2;
+}
+
+.price_card:last-child {
+	margin: 0;
+}
+
+.card_name {
+	font-size: 28px;
+	line-height: 30px;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
+
+.price_card .card_price {
+	display: flex;
+	align-items: flex-end;
+	justify-content: flex-start;
+	font-family: 'Poppins';
+	margin-bottom: 40px;
+}
+
+.price_cost {
+	font-size: 48px;
+	line-height: 42px;
+}
+
+.card_button {
+	border: 2px solid #0066ff;
+	box-sizing: border-box;
+	border-radius: 3px;
+	padding: 15px;
+	font-size: 16px;
+	line-height: 17px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #0066ff;
+	width: 100%;
+	font-weight: 700;
+	margin-bottom: 40px;
+}
+
+.card_button_selected {
+	background-color: #0066ff;
+	color: white;
+}
+
+.card_selected {
+	position: absolute;
+	left: -1px;
+	top: -38px;
+	height: 590px;
+	width: 101%;
+	border-radius: 10px;
+	display: flex;
+	align-items: flex-start;
+	justify-content: center;
+	border: 4px solid #0066ff;
+	z-index: -1;
+}
+
+.selected_header {
+	height: 38px;
+	width: 100%;
+	background-color: #0066ff;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+}
+
+.selected_header p {
+	font-size: 14px;
+	line-height: 16px;
+	color: white;
+	font-weight: 700;
+	margin-bottom: 2px;
+}
+
+.pricing_question {
+	width: 100%;
+	margin-bottom: 20px;
+}
+
+.pricing_question details {
+	transition: all 100ms ease-in-out;
+	border-bottom: 2px solid #d6dae4;
+	padding-bottom: 20px;
+}
+
+.pricing_question details[open] > summary > svg {
+	transition: all 100ms ease-in-out;
+	transform: rotate(180deg);
+}
+
+.pricing_question details summary {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.question_name {
+	font-size: 18px;
+	line-height: 21px;
+	font-weight: 700;
+}
+
+.question_answer {
+	padding-top: 15px;
+	font-size: 18px;
+	line-height: 24px;
+}
+
 /* ANYWHERE */
 
 .font-maxbold {
@@ -510,4 +638,10 @@ div {
 	font-size: 18px;
 	font-weight: 400;
 	line-height: 24px;
+}
+
+.text-description-md {
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 28px;
 }
