--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,24 @@ div {
 	padding-right: 30px;
 }
 
+.container-center {
+	width: 100%;
+	margin: 0 auto;
+	max-width: 1361px;
+	padding-left: 30px;
+	padding-right: 30px;
+	display: flex;
+	align-items: center;
+}
+
 @media screen and (max-width: 1100px) {
 	.container {
+		padding-left: 15px;
+		padding-right: 15px;
+		max-width: 1331px;
+	}
+
+	.container-center {
 		padding-left: 15px;
 		padding-right: 15px;
 		max-width: 1331px;
@@ -41,6 +57,7 @@ div {
 	display: flex;
 	align-items: center;
 	margin-right: 30px;
+	height: 100%;
 }
 
 /* SECTIONS */
@@ -706,7 +723,7 @@ div {
 	border-radius: 3px;
 }
 
-.btn-blue p {
+.btn-blue {
 	line-height: 20px;
 	font-size: 15px;
 	font-weight: 700;
