feature: added responsive styles for the "benefits 1" section

--- a/css/styles.css
+++ b/css/styles.css
@@ -301,6 +301,22 @@ div {
 	margin: 0;
 }
 
+@media screen and (max-width: 1400px) {
+	.benefits-social_item {
+		margin: 10px;
+	}
+
+	.benefits-social_item:last-child {
+		margin: 10px;
+	}
+}
+
+@media screen and (max-width: 550px) {
+	.benefits-social_item {
+		width: 100%;
+	}
+}
+
 /* SECTION: BENEFITS-2 */
 
 .benefits-2_card {
