--- a/css/styles.css
+++ b/css/styles.css
@@ -356,6 +356,40 @@ div {
 	line-height: 28px;
 }
 
+@media screen and (max-width: 1100px) {
+	.benefits-2_card {
+		max-width: 620px;
+		margin-bottom: 20px;
+		margin-right: 0;
+		max-height: none;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.benefits-card_title {
+		font-size: 28px;
+		line-height: 35px;
+		margin-bottom: 20px;
+	}
+
+	.card_iconBlock {
+		margin-bottom: 5px;
+	}
+
+	.card_iconBlock svg {
+		margin-right: 8px;
+		width: 20px;
+	}
+
+	.iconBlock_text {
+		font-size: 20px;
+	}
+
+	.card_description {
+		font-size: 16px;
+	}
+}
+
 /* SECTION: TEMPLATES */
 
 .template_card {
