--- a/css/styles.css
+++ b/css/styles.css
@@ -394,17 +394,21 @@ div {
 
 .template_card {
 	max-width: 310px;
-	min-height: 374px;
 	width: 100%;
 	border-radius: 10px;
 	margin-right: 20px;
+	min-height: 374px;
 }
 
 .template-card_btn {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: flex-start;
 	background-color: white;
 	user-select: none;
 	border-radius: 10px;
-	height: 374px;
+	height: 100%;
 	width: 100%;
 }
 
@@ -412,11 +416,14 @@ div {
 	margin: 0;
 }
 
+.template-card_preview {
+	margin-bottom: 10px;
+}
+
 .template-card_preview,
 .template-card_preview img {
 	border-start-start-radius: 10px;
 	border-start-end-radius: 10px;
-	margin-bottom: 10px;
 }
 
 .template-card_description {
@@ -460,6 +467,29 @@ div {
 
 .carousel_ellipse_active button {
 	background-color: white !important;
+}
+
+@media screen and (max-width: 900px) {
+	.template_card {
+		max-width: 100%;
+		border-radius: 10px;
+		margin-right: 0;
+		margin-bottom: 20px;
+	}
+
+	.template-card_btn {
+		align-items: center;
+	}
+
+	.template-card_preview {
+		width: 100%;
+	}
+
+	.template-card_preview img {
+		width: 100%;
+		max-height: 250px;
+		object-fit: cover;
+	}
 }
 
 /* SECTION: FEATURES */
