--- a/css/styles.css
+++ b/css/styles.css
@@ -115,18 +115,22 @@ div {
 @media screen and (max-width: 700px) {
 	.title {
 		font-size: 46px;
+		line-height: 54px;
 	}
 
 	.title-md {
 		font-size: 38px;
+		line-height: 54px;
 	}
 
 	.title-small {
 		font-size: 38px;
+		line-height: 44px;
 	}
 
 	.title-large {
 		font-size: 46px;
+		line-height: 54px;
 	}
 }
 
