--- a/css/styles.css
+++ b/css/styles.css
@@ -64,88 +64,6 @@ div {
 	background-color: #111827;
 }
 
-.title {
-	font-size: 56px;
-	font-weight: 900;
-	line-height: 60px;
-}
-
-.title-md {
-	font-weight: 900;
-	line-height: 60px;
-	font-size: 48px;
-}
-
-.title-small {
-	font-weight: 900;
-	line-height: 56px;
-	font-size: 48px;
-}
-
-.title-large {
-	font-weight: 900;
-	line-height: 66px;
-	font-size: 56px;
-}
-
-@media screen and (max-width: 1100px) {
-	.title {
-		font-size: 50px;
-	}
-
-	.title-md {
-		font-size: 42px;
-	}
-
-	.title-small {
-		font-size: 42px;
-	}
-
-	.title-large {
-		font-size: 50px;
-	}
-}
-
-@media screen and (max-width: 700px) {
-	.title {
-		font-size: 46px;
-		line-height: 54px;
-	}
-
-	.title-md {
-		font-size: 38px;
-		line-height: 44px;
-	}
-
-	.title-small {
-		font-size: 38px;
-		line-height: 44px;
-	}
-
-	.title-large {
-		font-size: 46px;
-		line-height: 54px;
-	}
-}
-
-@media screen and (max-width: 600px) {
-	.title {
-		font-size: 42px;
-	}
-
-	.title-md {
-		font-size: 34px;
-	}
-
-	.title-small {
-		font-size: 34px;
-	}
-
-	.title-large {
-		font-size: 42px;
-	}
-}
-
 /* SECTION: HERO */
 
 .section-hero {
@@ -982,5 +900,123 @@ div {
 
 	.text-description-md {
 		font-size: 16px;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.text-description {
+		font-size: 15px;
+	}
+
+	.text-description-md {
+		font-size: 15px;
+	}
+}
+
+.title {
+	font-size: 56px;
+	font-weight: 900;
+	line-height: 60px;
+}
+
+.title-md {
+	font-weight: 900;
+	line-height: 60px;
+	font-size: 48px;
+}
+
+.title-small {
+	font-weight: 900;
+	line-height: 56px;
+	font-size: 48px;
+}
+
+.title-large {
+	font-weight: 900;
+	line-height: 66px;
+	font-size: 56px;
+}
+
+@media screen and (max-width: 1100px) {
+	.title {
+		font-size: 50px;
+	}
+
+	.title-md {
+		font-size: 42px;
+	}
+
+	.title-small {
+		font-size: 42px;
+	}
+
+	.title-large {
+		font-size: 50px;
+	}
+}
+
+@media screen and (max-width: 700px) {
+	.title {
+		font-size: 46px;
+		line-height: 54px;
+	}
+
+	.title-md {
+		font-size: 38px;
+		line-height: 44px;
+	}
+
+	.title-small {
+		font-size: 38px;
+		line-height: 44px;
+	}
+
+	.title-large {
+		font-size: 46px;
+		line-height: 54px;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.title {
+		font-size: 34px;
+		line-height: 38px;
+	}
+
+	.title-md {
+		font-size: 30px;
+		line-height: 32px;
+	}
+
+	.title-small {
+		font-size: 30px;
+		line-height: 32px;
+	}
+
+	.title-large {
+		font-size: 34px;
+		line-height: 38px;
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.title {
+		font-size: 28px;
+		line-height: 32px;
+	}
+
+	.title-md {
+		font-size: 26px;
+		line-height: 28px;
+	}
+
+	.title-small {
+		font-size: 26px;
+		line-height: 28px;
+	}
+
+	.title-large {
+		font-size: 28px;
+		line-height: 32px;
 	}
 }
