fix: improved responsive styles for the "features 2" section

--- a/css/styles.css
+++ b/css/styles.css
@@ -982,7 +982,7 @@ div {
 	font-variant-caps: small-caps;
 }
 
-.markable {
+.marketable {
 	padding: 0 5px;
 }
 
@@ -1022,6 +1022,7 @@ div {
 
 .check svg {
 	margin-right: 10px;
+	min-width: 17px;
 }
 
 .text-description {
@@ -1082,41 +1083,41 @@ div {
 
 @media screen and (max-width: 1100px) {
 	.title {
-		font-size: 50px;
+		font-size: 46px;
 	}
 
 	.title-md {
-		font-size: 42px;
+		font-size: 40px;
 	}
 
 	.title-small {
-		font-size: 42px;
+		font-size: 40px;
 	}
 
 	.title-large {
-		font-size: 50px;
+		font-size: 46px;
 	}
 }
 
 @media screen and (max-width: 700px) {
 	.title {
-		font-size: 46px;
-		line-height: 54px;
+		font-size: 42px;
+		line-height: 50px;
 	}
 
 	.title-md {
-		font-size: 38px;
-		line-height: 44px;
+		font-size: 36px;
+		line-height: 40px;
 	}
 
 	.title-small {
-		font-size: 38px;
-		line-height: 44px;
+		font-size: 36px;
+		line-height: 40px;
 	}
 
 	.title-large {
-		font-size: 46px;
-		line-height: 54px;
+		font-size: 42px;
+		line-height: 50px;
 	}
 }
 
