--- a/css/styles.css
+++ b/css/styles.css
@@ -574,6 +574,18 @@ div {
 	line-height: 16px;
 }
 
+.feature-check {
+	display: flex;
+	align-items: center;
+	justify-content: flex-start;
+	margin-right: 40px;
+}
+
+.feature-check svg {
+	margin-right: 10px;
+	min-width: 17px;
+}
+
 .platform {
 	display: flex;
 	align-items: center;
@@ -614,6 +626,12 @@ div {
 
 	.feature-tag:last-child {
 		margin: 5px;
+	}
+}
+
+@media screen and (max-width: 1100px) {
+	.features-check {
+		margin-right: 0;
 	}
 }
 
