--- a/css/styles.css
+++ b/css/styles.css
@@ -1124,7 +1124,91 @@ img {
 	}
 }
 
-/* SECTINO: FOOTER */
+/* SECTION: HEADER MENU */
+
+.header-menu {
+	width: 100%;
+	position: fixed;
+	left: 0;
+	background-color: #f4f4f4;
+	padding: 20px;
+	box-shadow: 0px 7px 5px 0px #00000017;
+}
+
+.header-menu_link {
+	box-shadow: 0 0 5px 0px #e8e8e8;
+	display: block;
+	width: 100%;
+	height: 100%;
+	padding: 5px;
+	text-align: center;
+	font-weight: bold;
+	color: black;
+	font-size: 24px;
+	background-color: white;
+	border-radius: 5px;
+	user-select: none;
+}
+
+.header-menu-hidden {
+	animation-name: headerMenuHidden;
+	animation-duration: 0.2s;
+	animation-fill-mode: both;
+}
+
+.header-menu-show {
+	animation-name: headerMenuShow;
+	animation-duration: 0.2s;
+	animation-fill-mode: both;
+}
+
+@media screen and (max-width: 500px) {
+	.header-menu_link {
+		font-size: 20px;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.header-menu_link {
+		font-size: 18px;
+	}
+}
+
+@keyframes headerMenuHidden {
+	from {
+		display: block;
+		user-select: all;
+		transform: translateY(0px);
+		z-index: 5;
+		opacity: 1;
+	}
+	to {
+		display: none;
+		user-select: none;
+		transform: translateY(-180px);
+		opacity: 0;
+		z-index: -1;
+	}
+}
+
+@keyframes headerMenuShow {
+	from {
+		display: none;
+		user-select: none;
+		transform: translateY(-180px);
+		opacity: 0;
+		z-index: -1;
+	}
+	to {
+		display: block;
+		user-select: all;
+		transform: translateY(0px);
+		z-index: 5;
+		opacity: 1;
+	}
+}
+
+/* SECTION: FOOTER */
 
 .footer_block {
 	justify-content: flex-start;
